@@ -56,6 +56,7 @@ following names for their contribution to the product.
 
 == Patch Contributors ==
 * Agbad
+* Ahmad Sherif
 * Brad Jorsch
 * Brent G
 * Daniel Arnold
